--- a/bill-04.html
+++ b/bill-04.html
@@ -166,18 +166,18 @@
                     <div  ng-repeat="useditem in billselected.service_usage | filter:useFilter">
                         <div>כמה צרכת מהחבילה שלך?</div>
                         <div class="usage_row">
-                            <p>{{useditem.used[0].procentGB}}</p>
-                            <div class="donut" data-value="{{useditem.used[0].procentGB}}" data-text="#0B69BA" data-pct="{{useditem.used[0].procentGB}}"></div>
+
+                            <div class="donut" data-value="{{useditem.used[0].procentGB}}" data-text="#0B69BA" data-pct="{{useditem.used[0].GB}}"></div>
                         </div>
                         <div>כמה צרכת דקות שיחה?</div>
                         <div class="usage_row">
-                            <p>{{useditem.used[0].Min}}</p>
-                            <div class="donut" data-value="{{useditem.used[0].procentMin}}" data-text="#E1248E" data-pct="{{useditem.used[0].procentMin}}"></div>
+
+                            <div class="donut" data-value="{{useditem.used[0].procentMin}}" data-text="#E1248E" data-pct="{{useditem.used[0].Min}}"></div>
                         </div>
                         <div>כמה צרכת SMS ?</div>
                         <div class="usage_row">
-                            <p>{{useditem.used[0].SMS}}</p>
-                            <div class="donut" data-value="{{useditem.used[0].procentSms}}" data-text="#0B69BA" data-pct="{{useditem.used[0].procentSms}}"></div>
+
+                            <div class="donut" data-value="{{useditem.used[0].procentSms}}" data-text="#0B69BA" data-pct="{{useditem.used[0].SMS}}"></div>
                         </div>
                     </div>
                 </div>
